Pasted objects in pdf.js editor are sometimes empty or show rendering artifacts
Categories
(Core :: Widget: Gtk, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox101 | --- | unaffected |
| firefox102 | --- | unaffected |
| firefox103 | --- | verified |
| firefox104 | --- | fixed |
People
(Reporter: marco, Assigned: stransky)
References
(Blocks 1 open bug, Regression, )
Details
(Keywords: regression)
Attachments
(4 files, 2 obsolete files)
STR:
- Enable PDF.js editing by setting pdfjs.annotationEditorEnabled to true
- Draw something somewhere
- Select what you drew
- Press CTRL+C
- Press CTRL+V
When pasting, sometimes the pasted content is empty or has artifacts.
It is easily reproducible if you press CTRL+V, then CTRL+Z to cancel the paste, then CTRL+V again in a loop.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 1•3 years ago
|
||
Marco, can you please detail why you think this is a regression and what you think caused it?
| Reporter | ||
Comment 2•3 years ago
|
||
The bug isn't reproducible if you set gfx.canvas.accelerated to False, so it must be a regression of the GPU-accelerated canvas implementation.
Comment 3•3 years ago
|
||
Can you please attach your about:support information?
| Reporter | ||
Comment 4•3 years ago
|
||
Comment 5•3 years ago
|
||
Set release status flags based on info from the regressing bug 1770088
| Reporter | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 6•3 years ago
|
||
I can repro this on X11+EGL and Wayland, but not on X11+GLX nor macOS (with accelerated canvas on). Same with bug 1774214, actually.
Comment 7•3 years ago
|
||
Is this a duplicate of bug 1773755? (Caused by bug 1735929 and fixed by bug 1773968?)
Comment 8•3 years ago
|
||
I could repro bug 1774214 with a rather old build (2022-01-01) but I didn't try this one.
Updated•3 years ago
|
Comment 9•3 years ago
|
||
If I change the thickness/width/height variables to be whole pixels it doesn't.
Comment 10•3 years ago
|
||
Comment 11•3 years ago
|
||
I can't repro with my test-case nor the original bug if I set widget.dmabuf-webgl.enabled=false (and restart). Can you confirm Marco?
Comment 13•3 years ago
|
||
Martin does this ring any bell? It seems something going very wrong with shared DMABuf surfaces.
Comment 14•3 years ago
|
||
Comment 15•3 years ago
|
||
Ah, so at first I thought this was about the fractional stuff, but no, it's about the difference between width and height. Maybe a stride issue in the buffer or something? If in comment 9 I set width = 100 and height = 100 then there are no glitches.
Comment 16•3 years ago
|
||
So with mismatched width/height I get:
Unsupported modifier, resource creation failed.
XXX: resource creation failed
In the terminal, and glitches. With matched size I don't get that.
Comment 17•3 years ago
|
||
| Assignee | ||
Comment 18•3 years ago
|
||
I can reproduce that on Intel only, radeon and NVIDIA works ok.
On Fedora 36 I don't see
Unsupported modifier, resource creation failed.
XXX: resource creation failed
| Assignee | ||
Comment 19•3 years ago
|
||
I suspect this is a bug in EGL_MESA_image_dma_buf_export where stride is not exported correctly or we don't import it correctly.
I think EGL_MESA_image_dma_buf_export is a bit fresh and not well tested (see Bug 1774075).
| Assignee | ||
Comment 20•3 years ago
|
||
We can extend https://phabricator.services.mozilla.com/D149238 to disable EGL_MESA_image_dma_buf_export on Intel too.
| Assignee | ||
Comment 21•3 years ago
|
||
Hm, I can find anything obviously wrong here - exported dmabuf params are the same on amd and Intel for with/height 100/200, stride is 512 in both cases. DRM format looks also ok - ABGR8888.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 22•3 years ago
|
||
Depends on https://phabricator.services.mozilla.com/D149238
Depends on D149238
Comment 23•3 years ago
|
||
(In reply to Darkspirit from comment #7)
Is this a duplicate of bug 1773755?
I'll leave that up to stransky/other developers working directly on this -- but FWIW, here a few relevant notes:
- I can reproduce both bugs in Ubuntu 22.04 on my ThinkPad (using emilio's "Simpler test-case" attachment for this bug here)
- I also hit what seems to be this same sort of corruption on the web UI for my Synology NAS device; see screenshot in attachment 9281718 [details] (posted in bug 1773755 comment 14).
- I used mozregression to get a regression range for this bug here (with that testcase from emilio), and it matches bug 1773755's regression range (in bug 1773755 comment 1) -- both of these bugs seem to be regressions from bug 1735929:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=145141e21a29ad02ea84392f9a5e51803e68a3b7&tochange=f9c796ae5117065116947d61b8fe2bcae1f6b78c
(--> updating regressed-by field to replace bug 1770088; this started happening more recently than when that patch landed, so that's not proximally the thing-that-regressed-this, even though this is about a configuration that was enabled in that bug.)
Comment 24•3 years ago
•
|
||
Also FWIW, I just tested a local debug+opt build with https://phabricator.services.mozilla.com/D149238 and https://phabricator.services.mozilla.com/D149608 (this bug's associated patch stack).
I can confirm that with that patch stack applied, I get the expected rendering on emilio's testcase here, on bug 1773755 (windy.com), bug 1774214 (web.whatsapp.com), and on my Synology NAS device's web UI.
Comment 27•3 years ago
|
||
Recent Firefox Nightly builds running on Linux X11 on Intel graphics (Fedora 35 64-bit, non-compositing window manager, i7-8700K onboard graphics) unpredictably render some Grafana dashboard panels in a completely garbled way. Bisecting with mozregression lands me on https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=145141e21a29ad02ea84392f9a5e51803e68a3b7&tochange=f9c796ae5117065116947d61b8fe2bcae1f6b78c and as a result this bug. A screenshot that looks like my experience is https://twitter.com/moderat10n/status/1538923071939063808. Not all panels on a Grafana dashboard are mis-rendered but usually some are, frequently graph panels.
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 28•3 years ago
|
||
Updated•3 years ago
|
Comment 29•3 years ago
|
||
Also affects datadog dashboards on intel linux.
See this public dashboard for example: https://viarezo.fr/en/public_dashboard
Comment 30•3 years ago
|
||
:stansky just a reminder that Monday, June 27th is merge day for 103 to beta. If this will land before then?
| Assignee | ||
Comment 31•3 years ago
|
||
We need review first. [:jgilbert]?
| Assignee | ||
Updated•3 years ago
|
Comment 32•3 years ago
|
||
Comment 33•3 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 34•3 years ago
|
||
Comment on attachment 9282358 [details]
Bug 1774271 [Linux] Use DMABUF_SURFACE_EXPORT feature to control dmabuf surface export from EGLImage and disable that on Mesa/Intel and Mesa/AMD r?jgilbert
Beta/Release Uplift Approval Request
- User impact if declined: Visual corruption when WebGL is used on Intel/AMD devices.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Run testcase https://bugzilla.mozilla.org/attachment.cgi?id=9281575 in any Intel hardware and make sure the image is not corrupted.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Fallback to old and tested WebGL/dmabuf surface creation on Intel/AMD.
- String changes made/needed:
- Is Android affected?: No
| Assignee | ||
Updated•3 years ago
|
Comment 35•3 years ago
|
||
Comment on attachment 9282358 [details]
Bug 1774271 [Linux] Use DMABUF_SURFACE_EXPORT feature to control dmabuf surface export from EGLImage and disable that on Mesa/Intel and Mesa/AMD r?jgilbert
Approved for 103 beta 2, thanks.
Comment 36•3 years ago
|
||
| bugherder uplift | ||
Comment 37•3 years ago
|
||
Set release status flags based on info from the regressing bug 1735929
Updated•3 years ago
|
Comment 38•3 years ago
|
||
I tried to reproduce the issue on Ubuntu20.4 (wayland) having GPU: Intel(R) HD Graphics 530 and using build without the fix 103.0a1 (20220614213729) and the steps from description, but all I got was a bold drawing on both 'Simpler test-case' attached and on other pdf. Are there any other steps that I can try?
If not can you please confirm issue is not reproducing on latest Beta (https://archive.mozilla.org/pub/firefox/candidates/103.0b2-candidates/)? Thank you so much.
Description
•